test/files/neg/t8158.check
Test_2.scala:10: error: not enough patterns for <$anon: AnyRef> offering AnyRef{def isEmpty: Boolean; def get: this.type; def unapply(x: String): this.type}: expected 1, found 0
      case X() =>
           ^
one error found
